header class  added in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     <title>Nemanja Zivanovic | Web Developer</title>
   </head>
   <body>
-    <h1>Portfolio Website</h1>
+    <header class="header vh-100 text-center position-relative">
+      <div class="text-container position-relative d-flex flex-column justify-content-center align-items-center h-100">
+        
+      </div>
+    </header>
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/lightbox-plus-jquery.min.js"></script>
