--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
   </head>
   <body>
     <header class="header vh-100 text-center position-relative">
-      <div class="text-container position-relative d-flex flex-column justify-content-center align-items-center h-100">
-        
+      <div class="text-container position-relative d-flex flex-column 
+      justify-content-center align-items-center h-100">
+        <h5 class="text-primary fs-3 fw-bold text-uppercase">
+          Hello, World.
+        </h5>
+<h1 id="typing-text" class="display-1 fw-bold text-white">
+  I am Herbert Von Zivkos
+</h1>
       </div>
     </header>
 
