p,span  added in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 <h1 id="typing-text" class="display-1 fw-bold text-white">
   I am Herbert Von Zivkos
 </h1>
-      </div>
+
+<p class="roles text-white text-uppercase fs-4">
+  <span>Fll Stack Web Developer | </span>
+  <span>Online Deucator</span>
+</p>
+
+</div>
     </header>
 
     <script src="js/bootstrap.bundle.min.js"></script>
