span color changed line 43 in index.html

--- a/index.html
+++ b/index.html
@@ -30,10 +30,20 @@
 </h1>
 
 <p class="roles text-white text-uppercase fs-4">
-  <span>Fll Stack Web Developer | </span>
-  <span>Online Deucator</span>
+  <span>Full Stack Web Developer | </span>
+  <span>Online Educator</span>
 </p>
 
+<a href="#about" class="btn btn-outline-light btn-lg mt-3">
+  <div class="d-flex">
+    <div class="me-3">
+      <i class="fas fa-chevron-down"></i>
+    </div>
+    <div class="text-start">
+      <span style="color: blueviolet; background-origin: padding-box;">More About Me</span>
+    </div>
+  </div>
+</a>
 </div>
     </header>
 
