--- a/index.html
+++ b/index.html
@@ -44,6 +44,27 @@
     </div>
   </div>
 </a>
+
+<div class="socilal d-flex gap-3 position-absolute">
+  <a href="#">
+    <i class="fab fa-twitter fa-3x text-white"></i>
+  </a>
+  <a href="#">
+    <i class="fab fa-instagram fa-3x text-white"></i>
+  </a>
+  <a href="#">
+    <i class="fab fa-linkedin fa-3x text-white"></i>
+  </a>
+  <a href="#">
+    <i class="fab fa-facebook fa-3x text-white"></i>
+  </a>
+  <a href="#">
+    <i class="fab fa-youtube fa-3x text-white"></i>
+  </a>
+  <a href="#">
+    <i class="fab fa-github fa-3x text-white"></i>
+  </a>
+</div>
 </div>
     </header>
 
