bottstrap.scss error fixed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <i class="fas fa-chevron-down"></i>
     </div>
     <div class="text-start">
-      <span style="color: blueviolet; background-origin: padding-box;">More About Me</span>
+      <span>More About Me</span>
     </div>
   </div>
 </a>
