index.html  error fixed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           Hello, World.
         </h5>
 <h1 id="typing-text" class="display-1 fw-bold text-white">
-  I am Herbert Von Zivkos
+  Nemanja Zivnovic 
 </h1>
 
 <p class="roles text-white text-uppercase fs-4">
@@ -45,7 +45,7 @@
   </div>
 </a>
 
-<div class="socilal d-flex gap-3 position-absolute">
+<div class="social d-flex gap-3 position-absolute">
   <a href="#">
     <i class="fab fa-twitter fa-3x text-white"></i>
   </a>
