index.html, more sections added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
 </div>
     </header>
 
+    <!-- About -->
+    <section id="about" class="about bg-light py-5">
+      <div class="container">
+        <div class="text-center">
+          <h4 class="text-uppercase fw-bold text-primary">
+            
+          </h4>
+        </div>
+      </div>
+    </section>
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <script src="js/script.js"></script>
