--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
     <section id="about" class="about bg-light py-5">
       <div class="container">
         <div class="text-center">
-          <h4 class="text-uppercase fw-bold text-primary">
-            
-          </h4>
+          <h4 class="text-uppercase fw-bold text-primary">About Me</h4>
+          <hr class="w-25 mx-auto" />
+          <h2 class="md-4">Let me introduce myself.</h2>
         </div>
+        <div class="about-content d-flex gap-5 align-items-center h-100"></div>
       </div>
     </section>
 
