index.html, photo added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,18 @@
           <hr class="w-25 mx-auto" />
           <h2 class="md-4">Let me introduce myself.</h2>
         </div>
-        <div class="about-content d-flex gap-5 align-items-center h-100"></div>
+        <div class="about-content d-flex gap-5 align-items-center h-100">
+          <img src="images/IMG_4671.jpg" alt=""
+          class="about-img img-fluid rounded-circle"
+          />
+          <p class="lead">
+            I am a full stack web developer from SERBIA BG.
+            I started writing code about 7 years ago. 
+            I started with JavaScript and then moved to web technologies like HTML, CSS, PHP, TypeSript and Angylar. 
+            I have worked for companies as well as ran my own. In 2019 I started creating content full-time. 
+            I love helping people learn to code and better their lives.
+          </p>
+        </div>
       </div>
     </section>
 
