--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
       </div>
     </section>
 
+    <!-- Profile & Skills -->
+    <section class="profile my-6">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h3 class="text-uppercase fw-bold"></h3>
+          </div>
+        </div> 
+      </div>
+    </section>
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <script src="js/script.js"></script>
