--- a/index.html
+++ b/index.html
@@ -96,7 +96,43 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h3 class="text-uppercase fw-bold"></h3>
+            <h3 class="text-uppercase fw-bold">Profile</h3>
+            <p>
+              Here is some more info about myself to help you get to know me
+              better.
+            </p>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item mb-3">
+                <h5 class="text-transform">
+                  <i class="fas fa-user text-primary"></i> Full Name:
+                </h5>
+                <p>Nemanja Zivanovic</p>
+              </li>
+              <li class="list-group-item mb-3">
+                <h5 class="text-transform">
+                  <i class="fas fa-calendar text-primary"></i> Birth Date:
+                </h5>
+                <p>May 31, 1983</p>
+              </li>
+              <li class="list-group-item mb-3">
+                <h5 class="text-transform">
+                  <i class="fas fa-building text-primary"></i> Current Position:
+                </h5>
+                <p>Owner at Zivkoss Media</p>
+              </li>
+              <li class="list-group-item mb-3">
+                <h5 class="text-transform">
+                  <i class="fas fa-home text-primary"></i> Website:
+                </h5>
+                <p>zivkossmedia.com</p>
+              </li>
+              <li class="list-group-item mb-3">
+                <h5 class="text-transform">
+                  <i class="fas fa-envelope text-primary"></i> Email:
+                </h5>
+                <p>zivkoss@yahoo.com</p>
+              </li>
+            </ul>
           </div>
         </div> 
       </div>
