index.html more portfolio small projects added

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           class="about-img img-fluid rounded-circle"
           />
           <p class="lead">
-            I am a full stack web developer from SERBIA BG.
+            I am a full stack web developer from BELGRADE RS.
             I started writing code about 7 years ago. 
             I started with JavaScript and then moved to web technologies like HTML, CSS, PHP, TypeSript and Angylar. 
             I have worked for companies as well as ran my own. In 2019 I started creating content full-time. 
@@ -134,7 +134,282 @@
               </li>
             </ul>
           </div>
+          <div class="col-md-6">
+            <h3 class="text-uppercase fw-bold">Skills</h3>
+            <p>
+              Here is a list of my skills with these dumb percentages that don't
+              mean anything 😉
+            </p>
+            <h5><i class="fas fa-check"></i> HTML 5</h5>
+            <div
+              class="progress mb-4"
+              role="progressbar"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar" style="width: 100%">100%</div>
+            </div>
+
+            <h5><i class="fas fa-check"></i> CSS</h5>
+            <div
+              class="progress mb-4"
+              role="progressbar"
+              aria-valuenow="90"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar" style="width: 90%">90%</div>
+            </div>
+
+            <h5><i class="fas fa-check"></i> JavaScript</h5>
+            <div
+              class="progress mb-4"
+              role="progressbar"
+              aria-valuenow="90"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar" style="width: 90%">90%</div>
+            </div>
+
+            <h5><i class="fas fa-check"></i> Bootstrap</h5>
+            <div
+              class="progress mb-4"
+              role="progressbar"
+              aria-valuenow="100"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar" style="width: 100%">100%</div>
+            </div>
+
+            <h5><i class="fas fa-check"></i> PHP</h5>
+            <div
+              class="progress mb-4"
+              role="progressbar"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar" style="width: 75%">75%</div>
+            </div>
+
+            <h5><i class="fas fa-check"></i> Python</h5>
+            <div
+              class="progress mb-4"
+              role="progressbar"
+              aria-valuenow="70"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar" style="width: 70%">70%</div>
+            </div>
+
+            <h5><i class="fas fa-check"></i> UI/UX</h5>
+            <div
+              class="progress mb-4"
+              role="progressbar"
+              aria-valuenow="70"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar" style="width: 70%">70%</div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5 text-center">
+          <div class="col-12">
+            <a
+              href="#"
+              class="btn btn-outline-dark btn-lg text-uppercase px-5 mx-3 my-2"
+              >Hire Me Now</a
+            >
+            <a
+              href="#"
+              class="btn btn-dark btn-lg text-uppercase px-5 mx-3 my-2"
+              >Download CV</a
+            >
+          </div>
         </div> 
+      </div>
+    </section>
+
+    <section class="portfolio py-5 bg-light">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h4 class="text-uppercase fw-bold text-primary">Portfolio</h4>
+          <hr class="w-25 mx-auto" />
+          <h2 class="mb-4">Check Out My Work</h2>
+          <p class="lead">Here is a small sample of my projects.</p>
+        </div>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a
+                href="images/project1.jpg"
+                data-lightbox="images"
+                data-title="Cliboard Landing Page"
+              >
+                <img
+                  src="images/project1.jpg"
+                  alt=""
+                  class="img-fluid rounded-3"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a
+                href="images/project2.jpg"
+                data-lightbox="images"
+                data-title="Loop Studios Website"
+              >
+                <img
+                  src="images/project2.jpg"
+                  alt=""
+                  class="img-fluid rounded-3"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a
+                href="images/project3.jpg"
+                data-lightbox="images"
+                data-title="Shortly Website"
+              >
+                <img
+                  src="images/project3.jpg"
+                  alt=""
+                  class="img-fluid rounded-3"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a
+                href="images/project4.jpg"
+                data-lightbox="images"
+                data-title="Flyo Website"
+              >
+                <img
+                  src="images/project4.jpg"
+                  alt=""
+                  class="img-fluid rounded-3"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a
+                href="images/project5.jpg"
+                data-lightbox="images"
+                data-title="Bookmark Website"
+              >
+                <img
+                  src="images/project5.jpg"
+                  alt=""
+                  class="img-fluid rounded-3"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <div class="project shadow-lg rounded-5">
+              <a
+                href="images/project6.jpg"
+                data-lightbox="images"
+                data-title="Grid Layout"
+              >
+                <img
+                  src="images/project6.jpg"
+                  alt=""
+                  class="img-fluid rounded-3"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Styleshout -->
+    <section class="styleshout text-bg-dark bg-gradient p-6 text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>Shoutout to StyleShout</h1>
+            <hr class="w-25 mx-auto" />
+            <p class="lead mb-5">
+              Styleshout is a place for Free HTML5 Templates and Free Wordpress.
+              This design was inspired by one of their templates. Check them out
+              for templates to use and get inspiration from.
+            </p>
+            <a
+              href="https://styleshout.com"
+              target="_blank"
+              class="btn btn-primary btn-lg text-uppercase px-5 mx-3 my-2"
+            >
+              Visit StyleShout
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Services -->
+    <section class="services text-bg-dark py-5 position-relative">
+      <div class="container position-relative">
+        <div class="text-center mb-5">
+          <h4 class="text-uppercase fw-bold text-primary">Services</h4>
+          <hr class="w-25 mx-auto" />
+          <h2 class="mb-4">What Can I Do For You?</h2>
+          <p class="lead">
+            Here are some of the services that I offer when it comes to web
+            development and business.
+          </p>
+        </div>
+        <div class="row">
+          <div class="col-md-4 text-center">
+            <i class="fas fa-globe fa-3x text-primary mb-3"></i>
+            <h3 class="fs-3">Web Design</h3>
+            <hr class="w-25 mx-auto" />
+            <p class="fs-5">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quis
+              autem quam, illo quisquam eligendi illum delectus nam amet porro!
+            </p>
+          </div>
+
+          <div class="col-md-4 text-center">
+            <i class="fas fa-code fa-3x text-primary mb-3"></i>
+            <h3 class="fs-3">Web Development</h3>
+            <hr class="w-25 mx-auto" />
+            <p class="fs-5">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quis
+              autem quam, illo quisquam eligendi illum delectus nam amet porro!
+            </p>
+          </div>
+
+          <div class="col-md-4 text-center">
+            <i class="fas fa-shopping-cart fa-3x text-primary mb-3"></i>
+            <h3 class="fs-3">Advetising & SEO</h3>
+            <hr class="w-25 mx-auto" />
+            <p class="fs-5">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quis
+              autem quam, illo quisquam eligendi illum delectus nam amet porro!
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
