index.html Stats added

--- a/index.html
+++ b/index.html
@@ -413,6 +413,56 @@
       </div>
     </section>
 
+     <!-- Stats -->
+     <section class="stats py-5 text-bg-secondary">
+      <div class="container">
+        <div class="row g-0">
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-users fa-3x mb-3"></i>
+              <p class="fs-1">500+</p>
+              <h3 class="fs-6 text-uppercase">Clients</h3>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-project-diagram fa-3x mb-3"></i>
+              <p class="fs-1">700+</p>
+              <h3 class="fs-6 text-uppercase">Projects</h3>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-clock fa-3x mb-3"></i>
+              <p class="fs-1">16+</p>
+              <h3 class="fs-6 text-uppercase">Years</h3>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-book fa-3x mb-3"></i>
+              <p class="fs-1">25</p>
+              <h3 class="fs-6 text-uppercase">Publications</h3>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-youtube fa-3x mb-3"></i>
+              <p class="fs-1">2.06M</p>
+              <h3 class="fs-6 text-uppercase">Subscribers</h3>
+            </div>
+          </div>
+          <div class="col-md-4 col-lg-2">
+            <div class="stat text-center border-end border-dark">
+              <i class="fas fa-graduation-cap fa-3x mb-3"></i>
+              <p class="fs-1">1M+</p>
+              <h3 class="fs-6 text-uppercase">Students</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/lightbox-plus-jquery.min.js"></script>
     <script src="js/script.js"></script>
